# live_tool_music_generator

./: .gitignore  README.md  main.py  music_generator.css  music_generator.html  pyproject.toml  requirements-build.txt  requirements-test.txt  requirements.txt
