[tool.poetry]
name = "live-tool-music-generator"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "~3.9"
aoirint-id3 = {git = "https://github.com/aoirint/id3py.git", rev = "71f75bd48edd9eb8112a6b048888053a0a36943a"}


[tool.poetry.group.dev.dependencies]


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
