[tool.poetry]
name = "live-tool-music-generator"
version = "0.0.0"
description = ""
authors = ["aoirint <aoirint@gmail.com>"]
readme = "README.md"
packages = [{include = "."}]

[tool.poetry.dependencies]
python = "~3.9"
aoirint-id3 = {git = "https://github.com/aoirint/id3py.git", rev = "d21c667301c518d00153905818ebfadfadf3e979"}


[tool.poetry.group.dev.dependencies]


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
